--- a/IValve/IValve/View/NewPersonView.xaml
+++ b/IValve/IValve/View/NewPersonView.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:IValve.View"
         xmlns:s="https://github.com/canton7/Stylet"
         mc:Ignorable="d"
-        Title="NewPersonView" Height="600" Width="800">
+        Icon="C:\dev\c#\IValve\IValve\IValve\valve.png"
+        Title="IValve"
+        Height="600" Width="800">
 
     <Window.Resources>
         <Style TargetType="Button">
