--- a/IValve/IValve/View/RootView.xaml
+++ b/IValve/IValve/View/RootView.xaml
@@ -7,6 +7,8 @@
         xmlns:local="clr-namespace:IValve.View"
         mc:Ignorable="d"
         ResizeMode="NoResize"
+        Icon="C:\dev\c#\IValve\IValve\IValve\valve.png"
+        Title="IValve"
         Height="720" Width="1280">
 
     <Window.Resources>
